test/test_units/test_kclvm/test_types/invalid_test_data/module/module_2.k
import pkg as pkgpkg

a = pkgpkg.b
